feat: Integrate Vault for secure token management and enhance Facebook API security
- Added Vault configuration to docker-compose for managing sensitive tokens.
- Updated FacebookController to remove unnecessary fields in response.
- Refactored FacebookIngestionScheduler to use PageDTO instead of PageEntity.
- Enhanced FacebookGraphApiService to use POST requests for token exchanges, ensuring sensitive data is not exposed in URLs.
- Implemented token masking in logs to prevent sensitive information leakage.
- Introduced new methods in VaultService for storing, retrieving, and updating Facebook page tokens securely.
- Added utility class FacebookAppSecurityUtil for token masking and credential management.
- Created RestClientSecurityConfig to enforce HTTPS and secure RestClient configurations.
- Added new method in PlaceService for creating or finding places based on name and location.
- Updated tests for VaultService to accommodate new RestClient integration.